[gd_scene load_steps=31 format=3]

[ext_resource type="Script" path="res://Script/Level/DsgChoose.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c2vfl4clw7pa5" path="res://Art/set_menu/653.png" id="2"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="3"]
[ext_resource type="Texture2D" uid="uid://dnruq566a8bo1" path="res://Art/MagicWeapon/220.png" id="4"]
[ext_resource type="Texture2D" uid="uid://eqob07i5mlve" path="res://Art/MagicWeapon/222.png" id="5"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[sub_resource type="StyleBoxEmpty" id="21"]
script = null

[sub_resource type="StyleBoxEmpty" id="22"]
script = null

[sub_resource type="StyleBoxEmpty" id="23"]
script = null

[sub_resource type="StyleBoxEmpty" id="24"]
script = null

[sub_resource type="StyleBoxEmpty" id="25"]
script = null

[node name="DSGChoose" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -298.0
offset_top = -182.0
offset_right = 1141.0
offset_bottom = 685.0
color = Color(0, 0, 0, 0.0745098)
metadata/_edit_lock_ = true

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(462, 254)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="BG"]
offset_left = -149.0
offset_top = -115.0
offset_right = 143.0
offset_bottom = -86.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 25
text = "请选择兜率宫层数"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
offset_left = -119.0
offset_top = -70.0
offset_right = 101.0
offset_bottom = 40.0
theme_override_constants/separation = 15

[node name="dsgyc" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.427451, 0, 1)
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "兜率宫一层"

[node name="dsgyc2" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.427451, 0, 1)
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
text = "兜率宫地下一层"

[node name="dsgyc3" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.427451, 0, 1)
theme_override_styles/normal = SubResource( "11" )
theme_override_styles/hover = SubResource( "12" )
theme_override_styles/pressed = SubResource( "13" )
theme_override_styles/disabled = SubResource( "14" )
theme_override_styles/focus = SubResource( "15" )
text = "兜率宫地下二层"

[node name="dsgyc4" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.427451, 0, 1)
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
text = "兜率宫地下三层"

[node name="dsgyc5" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.427451, 0, 1)
theme_override_styles/normal = SubResource( "21" )
theme_override_styles/hover = SubResource( "22" )
theme_override_styles/pressed = SubResource( "23" )
theme_override_styles/disabled = SubResource( "24" )
theme_override_styles/focus = SubResource( "25" )
text = "兜率宫地下四层"

[node name="Close" type="TextureButton" parent="BG"]
offset_left = 109.0
offset_top = -157.0
offset_right = 150.0
offset_bottom = -116.0
texture_normal = ExtResource( "4" )
texture_pressed = ExtResource( "4" )
texture_hover = ExtResource( "5" )
texture_disabled = ExtResource( "4" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="BG/VBoxContainer/dsgyc" to="." method="_on_dsgyc_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/dsgyc2" to="." method="_on_dsgyc_2_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/dsgyc3" to="." method="_on_dsgyc_3_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/dsgyc4" to="." method="_on_dsgyc_4_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/dsgyc5" to="." method="_on_dsgyc_5_pressed" flags=18]
[connection signal="pressed" from="BG/Close" to="." method="_on_close_pressed" flags=18]
